# showcase

./: .dockerignore  .env.example  .pre-commit-config.yaml  docker-compose.prod.yaml  docker-compose.yaml  dump.sql  pyproject.toml
.github/workflows/: deploy.yml
cli/: main.py  telegram_bot.py
configs/: base.yaml  example.yaml
docker/: Dockerfile  Dockerfile.migrations
migrations/: env.py
migrations/versions/: 0765612cc6b0_init.py  0ebab11ac41b_update_search_vector_for_all_courses.py  1015329ea83a_add_enrollments.py  17287af79cc5_add_lecturer_competencies.py  4ef06b131b1f_add_email_column_to_users_table.py  697c7a108938_remove_association_ids.py  71b440f8feb5_reduce_category.py  78fa1d882248_reduce_course.py  951cbd11dcd0_add_discounted_cost.py  9625cbdb960d_timezone_aware_enrollment_base.py  9be923b42de7_init.py  b388eb4c2eca_enrich_course_entity.py  c0c9a4bde5e6_remove_tag_description.py  d61f2103137c_add_cascade_delete_to_course_lecturer.py  d713d8275e84_add_cascade_deletes.py  d72f54ef2d05_init.py
src/bootstrap/: config.py  utils.py
src/common/application/: exceptions.py
src/common/application/interfaces/transactions/: unit_of_work.py
src/common/domain/: __init__.py
src/common/domain/exceptions/: __init__.py
src/common/domain/interfaces/: clock.py  token_generator.py  uuid_generator.py
src/common/domain/value_objects/: address.py  datetime.py  email.py  phone_number.py
src/common/infrastructure/: __init__.py
src/common/infrastructure/config/: config.py  database_config.py  deployment_meta.py  llm_config.py  loader.py  logger_config.py  telegram_config.py
src/common/infrastructure/database/: __init__.py
src/common/infrastructure/database/postgres/: __init__.py
src/common/infrastructure/di/container/: common.py  providers.py
src/common/infrastructure/logger/logging/: formatter.py  logger_factory.py
src/common/infrastructure/services/: clock.py  id_generator.py  secrets_token_generator.py
src/common/infrastructure/services/llama_index/: client.py
src/common/presentation/http/dto/: response.py
src/idp/auth/application/repositories/: descriptor_repository.py
src/idp/auth/domain/entity/: token.py
src/idp/auth/infrastructure/config/: auth_config.py
src/idp/identity/application/: exceptions.py
src/idp/identity/application/services/: identity_service.py
src/idp/identity/domain/entity/: identity.py
src/idp/identity/domain/factories/: identity_factory.py
src/idp/identity/domain/interfaces/: identity_factory.py
src/idp/identity/domain/value_objects/: descriptor.py  email.py  password.py  username.py
src/showcase/: __init__.py
src/showcase/category/application/: __init__.py
src/showcase/category/application/dtos/: __init__.py
src/showcase/category/application/interfaces/: __init__.py
src/showcase/category/application/read_models/: category_read_model.py
src/showcase/category/application/usecases/: __init__.py  get_categories_usecase.py  (+1 more)
src/showcase/category/infrastructure/: __init__.py
src/showcase/category/presentation/: __init__.py
src/showcase/course/application/: __init__.py
src/showcase/course/domain/: __init__.py
src/showcase/course/infrastructure/: __init__.py
src/showcase/course/presentation/: __init__.py
src/showcase/lecturer/application/: __init__.py
src/showcase/lecturer/domain/: __init__.py
src/showcase/lecturer/infrastructure/: __init__.py
src/showcase/lecturer/presentation/: __init__.py
(+259 files in other folders)
